[tool.poetry]
name = "reverb"
version = "0.1.0"
description = ""
authors = ["Petter Strandmark <petter.strandmark@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
sounddevice = "*"
matplotlib = "*"
numpy = "*"

[tool.poetry.dev-dependencies]
black = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
